golang/k8s/first/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: localhost
      http:
        paths:
          # Правило 1: Если запрос идет на /api/auth -> кидаем напрямую в сервис авторизации
          - path: /api/auth/
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80

          # Правило 2: Если запрос идет на /api/v1 -> кидаем напрямую в основной бэк
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
